<resources>
    <string name="app_name">MovieRating</string>
    <string name="Director">Director</string>

    <string name="Duration">Duration</string>

    <string name="Movie_name">Movie Name</string>

    <string name="Save">Save</string>

    <string name="Starring">Starring</string>

    <string name="Write_Review">Write review here</string>

    <string name="Year">year</string>
    <string name="dname">Type Director name: </string>
    <string name="Finish">Finish</string>

    <string name="Dur">Duration:</string>
    <string name="Genre">Genre:</string>
    <string name="Name">Name:</string>
    <string name="yr">Year:</string>
    <string name="dr">Director:</string>
    <string name="Starcast">Starcast:</string>
    <string name="Review">Review:</string>
    <string name="TextView">TextView:</string>



</resources>
