<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="371dp"
        android:layout_marginRight="371dp"
        android:layout_marginBottom="667dp"
        android:layout_weight="1"
        android:text="@string/Genre"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView3"
        android:layout_marginBottom="-12dp"
        android:layout_weight="1"
        android:text="@string/yr"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView5"
        android:layout_marginBottom="-35dp"
        android:layout_weight="1"
        android:text="@string/Duration"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView7"
        android:layout_marginBottom="-33dp"
        android:layout_weight="1"
        android:text="@string/Starcast"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView11"
        android:layout_marginBottom="-31dp"
        android:layout_weight="1"
        android:text="@string/dr"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView13"
        android:layout_alignParentRight="true"
        android:layout_marginRight="187dp"
        android:layout_marginBottom="156dp"
        android:layout_weight="1"
        android:text="@string/TextView"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="188dp"
        android:layout_marginBottom="-30dp"
        android:layout_weight="1"
        android:text="@string/TextView"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView4"
        android:layout_alignParentRight="true"
        android:layout_marginRight="186dp"
        android:layout_marginBottom="-29dp"
        android:layout_weight="1"
        android:text="@string/TextView"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView6"
        android:layout_alignParentRight="true"
        android:layout_marginRight="185dp"
        android:layout_marginBottom="-33dp"
        android:layout_weight="1"
        android:text="@string/TextView"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView8"
        android:layout_alignParentRight="true"
        android:layout_marginRight="183dp"
        android:layout_marginBottom="-32dp"
        android:layout_weight="1"
        android:text="@string/TextView"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView12"
        android:layout_alignParentRight="true"
        android:layout_marginRight="184dp"
        android:layout_marginBottom="-33dp"
        android:layout_weight="1"
        android:text="@string/TextView"
        android:textColor="#000000" />

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView14"
        android:layout_marginBottom="-67dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/ratingBar1"
        android:layout_marginBottom="-41dp"
        android:layout_weight="1"
        android:text="@string/Review"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView9"
        android:layout_marginBottom="-31dp"
        android:layout_weight="1"
        android:text="@string/TextView"
        android:textColor="#000000" />



</RelativeLayout>
